--- a/haskell-formatter.cabal
+++ b/haskell-formatter.cabal
@@ -16,7 +16,7 @@ build-type:          Simple
 cabal-version:       >=1.8
 
 executable haskell-formatter
-  -- main-is:             
+  main-is:             Main.hs
   -- other-modules:       
   build-depends:       base ==4.6.*, containers ==0.5.*, split ==0.2.*, haskell-src-exts ==1.15.*
   hs-source-dirs:      src
