--- a/haskell-formatter.cabal
+++ b/haskell-formatter.cabal
@@ -35,12 +35,14 @@ library
                        Evolutics.Transformations.ElementArrangement
   build-depends:       base, containers, haskell-src-exts, split
   hs-source-dirs:      src/library
+  ghc-options:         -Wall -Werror
 
 executable haskell-formatter
   main-is:             Main.hs
   -- other-modules:       
   build-depends:       base, haskell-formatter
   hs-source-dirs:      src/executable
+  ghc-options:         -Wall -Werror
 
 test-suite test
   type:                exitcode-stdio-1.0
@@ -53,3 +55,4 @@ test-suite test
                        tasty,
                        tasty-hunit
   hs-source-dirs:      testsuite
+  ghc-options:         -Wall -Werror
