Separate locations facade as own module

--- a/haskell-formatter.cabal
+++ b/haskell-formatter.cabal
@@ -21,7 +21,8 @@ library
                        Evolutics.Code.Abstract,
                        Evolutics.Code.Comment,
                        Evolutics.Code.Concrete,
-                       Evolutics.Code.Locations,
+                       Evolutics.Code.Helper,
+                       Evolutics.Code.Location,
                        Evolutics.Code.Merged,
                        Evolutics.Code.Shifting,
                        Evolutics.Code.Source,
