Introduce type for formatter phases

--- a/haskell-formatter.cabal
+++ b/haskell-formatter.cabal
@@ -28,8 +28,10 @@ library
                        Language.Haskell.Formatter.Default.CommentFormatting,
                        Language.Haskell.Formatter.Default.CommentIntegration,
                        Language.Haskell.Formatter.Default.ElementArrangement,
+                       Language.Haskell.Formatter.Default.Formatter,
                        Language.Haskell.Formatter.Default.Shifting,
                        Language.Haskell.Formatter.Error,
+                       Language.Haskell.Formatter.Formatter,
                        Language.Haskell.Formatter.Formatting,
                        Language.Haskell.Formatter.Toolkit.FunctionTool,
                        Language.Haskell.Formatter.Toolkit.ListTool,
