--- a/haskell-formatter.cabal
+++ b/haskell-formatter.cabal
@@ -42,33 +42,35 @@ library
                        Language.Haskell.Formatter.Toolkit.StreamName,
                        Language.Haskell.Formatter.Toolkit.Visit
 
-  build-depends:       base, containers, haskell-src-exts
+  build-depends:       base == 4.6.*,
+                       containers == 0.5.*,
+                       haskell-src-exts == 1.15.*
   hs-source-dirs:      src/library
   ghc-options:         -Wall -Werror
 
 executable haskell-formatter
   main-is:             Main.hs
   -- other-modules:       
-  build-depends:       base,
-                       directory,
-                       filepath,
+  build-depends:       base == 4.6.*,
+                       directory == 1.2.*,
+                       filepath == 1.3.*,
                        haskell-formatter,
-                       optparse-applicative
+                       optparse-applicative == 0.10.*
   hs-source-dirs:      src/executable
   ghc-options:         -Wall -Werror
 
 test-suite test
   type:                exitcode-stdio-1.0
   main-is:             Main.hs
-  build-depends:       base,
-                       containers,
-                       directory-tree,
-                       doctest,
-                       filemanip,
-                       filepath,
+  build-depends:       base == 4.6.*,
+                       containers == 0.5.*,
+                       directory-tree == 0.12.*,
+                       doctest == 0.9.*,
+                       filemanip == 0.3.*,
+                       filepath == 1.3.*,
                        haskell-formatter,
-                       hlint,
-                       tasty,
-                       tasty-hunit
+                       hlint == 1.9.*,
+                       tasty == 0.9.*,
+                       tasty-hunit == 0.9.*
   hs-source-dirs:      testsuite/src
   ghc-options:         -Wall -Werror
