--- a/testsuite/resources/examples/default_style.yaml
+++ b/testsuite/resources/examples/default_style.yaml
@@ -2,9 +2,10 @@
 line_length_limit: 80
 
 # How much to spread code over multiple lines instead of trying to fill a single
-# line. More precisely, this is the ratio of the ribbon (number of characters
-# on a line without leading and trailing whitespace) to "line_length_limit".
-# Only the lowest value of 1 forces "line_length_limit" to be applied strictly.
+# line. More precisely, this guides the ratio of "line_length_limit" to the
+# ribbon length (the number of characters on a line without leading and trailing
+# whitespace). Only the lowest value of 1 forces "line_length_limit" to be
+# applied strictly.
 # Reference: http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.38.8777
 ribbons_per_line: 1
 
