Make application of import ordering configurable

--- a/testsuite/resources/examples/default_style.yaml
+++ b/testsuite/resources/examples/default_style.yaml
@@ -17,3 +17,11 @@ indentations:
     let: 4       # Declarations in "let" expressions.
     where: 6     # Declarations in "where" clauses.
     onside: 2    # Continuation lines which would otherwise be offside.
+
+# Decides which parts of the code to sort.
+order:
+    # Sequence of import declarations.
+    import_declarations: true
+
+    # Entities of import lists.
+    import_entities: true
