Make limit for successive empty lines configurable
This closes #7.

--- a/testsuite/resources/examples/default_style.yaml
+++ b/testsuite/resources/examples/default_style.yaml
@@ -9,13 +9,16 @@ line_length_limit: 80
 # Reference: http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.38.8777
 ribbons_per_line: 1
 
+# More than this number of empty lines in succession are merged.
+successive_empty_lines_limit: 1
+
 # Indentation lengths in characters.
 indentations:
-    class: 8     # "class" and "instance" declarations.
-    do: 3        # "do" notation. 
-    case: 4      # Body of "case" expressions.
-    let: 4       # Declarations in "let" expressions.
-    where: 6     # Declarations in "where" clauses.
+    class:  8    # "class" and "instance" declarations.
+    do:     3    # "do" notation. 
+    case:   4    # Body of "case" expressions.
+    let:    4    # Declarations in "let" expressions.
+    where:  6    # Declarations in "where" clauses.
     onside: 2    # Continuation lines which would otherwise be offside.
 
 # Decides which parts of the code to sort.
