--- a/haskell-formatter.cabal
+++ b/haskell-formatter.cabal
@@ -62,7 +62,7 @@ library
   build-depends:
     base >= 4.6,
     containers >= 0.5,
-    haskell-src-exts >= 1.16,
+    haskell-src-exts == 1.16.*,
     scientific >= 0.3,
     text >= 1.0,
     unordered-containers >= 0.2,
