--- a/haskell-formatter.cabal
+++ b/haskell-formatter.cabal
@@ -60,13 +60,13 @@ library
     Language.Haskell.Formatter.Toolkit.Visit
 
   build-depends:
-    base == 4.6.*,
-    containers == 0.5.*,
-    haskell-src-exts == 1.16.*,
-    scientific == 0.3.*,
-    text == 1.1.*,
-    unordered-containers == 0.2.*,
-    yaml == 0.8.*
+    base >= 4.6,
+    containers >= 0.5,
+    haskell-src-exts >= 1.16,
+    scientific >= 0.3,
+    text >= 1.0,
+    unordered-containers >= 0.2,
+    yaml >= 0.8
 
   hs-source-dirs:
     src/library
@@ -77,11 +77,11 @@ executable haskell-formatter
   main-is:             Main.hs
 
   build-depends:
-    base == 4.6.*,
-    directory == 1.2.*,
-    filepath == 1.3.*,
+    base >= 4.6,
+    directory >= 1.2,
+    filepath >= 1.3,
     haskell-formatter,
-    optparse-applicative == 0.10.*
+    optparse-applicative >= 0.10
 
   hs-source-dirs:
     src/executable
@@ -100,16 +100,16 @@ test-suite test
     Language.Haskell.Formatter.Toolkit.TestTool
 
   build-depends:
-    base == 4.6.*,
-    containers == 0.5.*,
-    directory-tree == 0.12.*,
-    doctest == 0.9.*,
-    filemanip == 0.3.*,
-    filepath == 1.3.*,
+    base >= 4.6,
+    containers >= 0.5,
+    directory-tree >= 0.11,
+    doctest >= 0.9,
+    filemanip >= 0.3,
+    filepath >= 1.3,
     haskell-formatter,
-    hlint == 1.9.*,
-    tasty == 0.9.*,
-    tasty-hunit == 0.9.*
+    hlint >= 1.9,
+    tasty >= 0.9,
+    tasty-hunit >= 0.8
 
   hs-source-dirs:
     testsuite/src
