--- a/haskell-formatter.cabal
+++ b/haskell-formatter.cabal
@@ -60,7 +60,7 @@ library
     Language.Haskell.Formatter.Toolkit.Visit
 
   build-depends:
-    base >= 4.6,
+    base >= 4.6 && < 4.8,
     containers >= 0.5,
     haskell-src-exts == 1.16.*,
     scientific >= 0.3,
@@ -71,13 +71,13 @@ library
   hs-source-dirs:
     src/library
 
-  ghc-options:         -Wall -Werror
+  ghc-options:         -Wall
 
 executable haskell-formatter
   main-is:             Main.hs
 
   build-depends:
-    base >= 4.6,
+    base >= 4.6 && < 4.8,
     directory >= 1.2,
     filepath >= 1.3,
     haskell-formatter,
@@ -86,7 +86,7 @@ executable haskell-formatter
   hs-source-dirs:
     src/executable
 
-  ghc-options:         -Wall -Werror
+  ghc-options:         -Wall
 
 test-suite test
   type:                exitcode-stdio-1.0
@@ -100,7 +100,7 @@ test-suite test
     Language.Haskell.Formatter.Toolkit.TestTool
 
   build-depends:
-    base >= 4.6,
+    base >= 4.6 && < 4.8,
     containers >= 0.5,
     directory-tree >= 0.11,
     doctest >= 0.9,
@@ -114,7 +114,7 @@ test-suite test
   hs-source-dirs:
     testsuite/src
 
-  ghc-options:         -Wall -Werror
+  ghc-options:         -Wall
 
 source-repository head
   type:                git
