--- a/haskell-formatter.cabal
+++ b/haskell-formatter.cabal
@@ -60,7 +60,7 @@ library
     Language.Haskell.Formatter.Toolkit.Visit
 
   build-depends:
-    base >= 4.6 && < 4.8,
+    base >= 4.6,
     containers >= 0.5,
     haskell-src-exts == 1.16.*,
     scientific >= 0.3,
@@ -77,7 +77,7 @@ executable haskell-formatter
   main-is:             Main.hs
 
   build-depends:
-    base >= 4.6 && < 4.8,
+    base >= 4.6,
     directory >= 1.2,
     filepath >= 1.3,
     haskell-formatter,
@@ -100,7 +100,7 @@ test-suite test
     Language.Haskell.Formatter.Toolkit.TestTool
 
   build-depends:
-    base >= 4.6 && < 4.8,
+    base >= 4.6,
     containers >= 0.5,
     directory-tree >= 0.11,
     doctest >= 0.9,
@@ -108,6 +108,7 @@ test-suite test
     filepath >= 1.3,
     haskell-formatter,
     hlint >= 1.9,
+    QuickCheck == 2.8.1,
     tasty >= 0.9,
     tasty-hunit >= 0.8
 
